# PathTracer

./: .gitignore  CMakeLists.txt  Color.cpp  Color.hpp  Geometry.cpp  Image.cpp  Makefile  Material.cpp  Material.hpp  README.md  Random.hpp  Render.cpp  Render.hpp  Scene.cpp  Transform.cpp  Transform.hpp
ply/: donut1000.ply  figure.ply  sceneDonutColored.ply
trabajo1/: Geometria.hpp  Geometric.cpp  Geometric.hpp  HCoord.cpp  HCoord.hpp  HPoint.hpp  Operations.hpp  PuntoDireccion.hpp  README.md  Transform.cpp  Transform.hpp  main.cpp  reparto.txt
trabajo2/: .gitignore  Image.cpp  Image.hpp  main.cpp
trabajo3/: Color.cpp  Color.hpp  Geometric.cpp  Geometric.hpp  Geometry.cpp  (+22 more)
trabajo4/: BRDF.cpp  CMakeLists.txt  Color.cpp  Color.hpp  Geometry.cpp  Geometry.hpp  HCoord.cpp  HCoord.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Makefile  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  Transform.hpp  main.cpp  pathtracer.cpp
trabajo4/ply/: donut500.ply
trabajo5/: BRDF.cpp  BRDF.hpp  CMakeLists.txt  FotonMapping.cpp  FotonMapping.hpp  HCoord.cpp  HCoord.hpp  Image.hpp  KDTree.hpp  Makefile  Material.cpp  Object.cpp  Object.hpp  PhotonMapping.cpp  PhotonMapping.hpp  Progress.cpp  Progress.hpp  README.md  Random.cpp  Random.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  main.cpp  pathtracer.cpp
trabajo5/images/: caustics2_hdr.ppm  caustics3_hdr.ppm  caustics_hdr.ppm  contest_hdr.ppm  layers_hdr.ppm  rainbow2_hdr.ppm  rainbow3_hdr.ppm  rainbow4_hdr.ppm  rainbow_hdr.ppm  report_hdr.ppm
trabajo5/ply/: car.ply  monkey.ply
(+3 files in other folders)
